fix: disable progressdialog's autoreset

`QProgressDialog` has a default `autoreset` turned on which will reset the progress bar when max value reached and it will prevents 100% being shown

The source of truth is here: https://github.com/qt/qtbase/blame/bd99d02123dcb9e406d06605fe0fa8a9d2cea3a4/src/widgets/dialogs/qprogressdialog.cpp#L655-L657

I don't know why `QProgressDialog` have `autoreset` while `QProgressBar` don't, but it is there for at least 10 years.

To test this:
```
dbusRef=`kdialog --progressbar "init val" 3`
qdbus $dbusRef Set "" value 1
sleep 1
qdbus $dbusRef Set "" value 2
sleep 1
qdbus $dbusRef Set "" value 3
sleep 1
```

BUG: 450015


(cherry picked from commit 071216ef09c80c07027bf37db216d0b90d2bfbf3)